Disable dedup expr
Signed-off-by: Lantao Jin <ltjin@amazon.com>